feat: Backend integrado com microsserviços